fix(UI): change the main theme to dark mode

--- a/src/assets/styles/globals.scss
+++ b/src/assets/styles/globals.scss
@@ -1,4 +1,5 @@
 @use './reset.scss';
+@use './variables.scss';
 
 html {
   font-size: calc(16px + 0.5vw);
@@ -7,8 +8,10 @@ html {
 #app {
   display: flex;
   flex-direction: column;
-  height: 100vh;
+  min-height: 100vh;
   font-family: 'Poppins', sans-serif;
   font-size: 0.75rem;
   font-weight: normal;
+  color: variables.$text;
+  background-color: variables.$background;
 }
