--- a/src/assets/styles/variables.scss
+++ b/src/assets/styles/variables.scss
@@ -1,7 +1,10 @@
-$red: #ff0055;
-$blue: #0364ee;
-$gray: #e5e5e5;
-$dark-gray: #717c96;
-$black: #353839;
-$white: #ffffff;
-$dark-mode-bg: #0e2532;
+$text: #ffffff;
+$background: #0e2532;
+$subtext: #abb8d9;
+$border: #ffffffb7;
+$overlay: #ffffff33;
+$lighter-overlay: #ffffff5e;
+$yellow: #faec00;
+$cyan: #0cabe8;
+$player: #0364ee;
+$opponent: #ff0055;
