--- a/src/components/shipInfo/shipInfo.scss
+++ b/src/components/shipInfo/shipInfo.scss
@@ -1,7 +1,6 @@
 @use '@/assets/styles/variables.scss';
 
 .ship-info {
-  color: variables.$black;
   transition: all ease 0.2s;
 
   &.sunk {
