--- a/src/components/yard/yard.scss
+++ b/src/components/yard/yard.scss
@@ -4,7 +4,7 @@
   display: flex;
 
   .title {
-    color: variables.$dark-gray;
+    color: variables.$subtext;
     font-size: 0.7rem;
     font-weight: 600;
     letter-spacing: 2px;
